@@ -1,4 +1,4 @@
-#	$NetBSD: rc.conf,v 1.136 2016/01/07 11:51:07 roy Exp $
+#	$NetBSD: rc.conf,v 1.137 2016/08/20 11:21:50 christos Exp $
 #
 # /etc/defaults/rc.conf --
 #	default configuration of /etc/rc.conf
@@ -387,3 +387,7 @@ ip6addrctl=NO
 # ipv6_prefer, ipv4_prefer, auto
 ip6addrctl_policy=auto
 ip6addrctl_verbose=NO
+
+# Unbound
+unbound=NO
+unbound_chrootdir=/var/chroot/unbound
