@@ -1,4 +1,4 @@
-# LIST OF CHANGES FROM LAST RELEASE:			<$Revision: 1.2180 $>
+# LIST OF CHANGES FROM LAST RELEASE:			<$Revision: 1.2181 $>
 #
 #
 # [Note: This file does not mention every change made to the NetBSD source tree.
@@ -339,3 +339,4 @@ Changes from NetBSD 7.0 to NetBSD 8.0:
 	OpenSSH: Imported 7.3. [christos 20160802]
 	zoneinfo: Import tzdata2016f. [kre 20160807]
 	dhcpcd(8): Import dhcpcd-6.11.3. [roy 20160815]
+	unbound: Import 1.5.9. [christos 20160820]
